# example-with-ci

./: .env.q8s  .gitignore  .pre-commit-config.yaml  Q8Sproject  README.md  notebook.ipynb  pyproject.toml  requirements-dev.txt
.github/workflows/: build-images.yaml
src/workloads/: q8s_runtime.py  sample_workload.py  sample_workload_with_mlflow.py
