[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "workloads"
version = "0.1.0"
description = "A minimal Python package"
readme = "README.md"
requires-python = ">=3.10"

# Optional but recommended when using src layout
[tool.setuptools.packages.find]
where = ["src"]
